[package]
name = "sexpr"
version = "0.1.0"
authors = ["Zephyr Pellerin <zv@nxvr.org>"]
license = "MIT/Apache-2.0"
description = "Multi-format S-expression serialization/deserialization support"
repository = "https://github.com/zv/sexpr"
keywords = ["sexp","s-exp","sexpr","smtlib"]
documentation = "https://zv.github.io/rust/sexpr"

[dependencies]
clippy = {version = "*", optional = true}
rustc-serialize = "0.3"
serde = "1.0.2"
serde_derive = "1.0.2"

[[bin]]
name = "main"
doc = false

